bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:5: error: ';' expected but 'else' found.
  } else if (!aSmile && !bSmile) { 
    ^